--- a/PopularMovies/app/src/main/res/layout/activity_main.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,12 @@
 <GridView
     android:id="@+id/grid_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:numColumns="2"
-    android:padding="8dp"
+    android:layout_height="match_parent"
+    android:columnWidth="150dp"
+    android:numColumns="auto_fit"
+    android:verticalSpacing="0dp"
+    android:horizontalSpacing="0dp"
+    android:stretchMode="columnWidth"
     xmlns:android="http://schemas.android.com/apk/res/android"
     />
 
