--- a/PopularMovies/app/src/main/res/layout/grid_item.xml
+++ b/PopularMovies/app/src/main/res/layout/grid_item.xml
@@ -5,19 +5,8 @@
     android:layout_height="match_parent">
   <ImageView
       android:id="@+id/poster"
-      android:layout_width="160dp"
-      android:layout_height="160dp"
-      android:layout_gravity="center"
+      android:layout_width="200dp"
+      android:layout_height="200dp"
+      android:scaleType="centerCrop"
       />
-  <TextView
-      android:id="@+id/title"
-      android:layout_gravity="center"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="15dp"
-      android:layout_marginTop="5dp"
-      android:layout_marginBottom="5dp"
-      android:text="Title"
-      />
-
 </LinearLayout>
