--- a/PopularMovies/app/src/main/res/layout/activity_main.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <GridView
     android:id="@+id/grid_view"
     android:layout_width="match_parent"
@@ -11,4 +13,20 @@
     android:stretchMode="columnWidth"
     xmlns:android="http://schemas.android.com/apk/res/android"
     />
+    <!-- Empty view is only visible when the list has no items. -->
+<TextView
+android:id="@+id/empty_view"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_centerInParent="true"
+android:textAppearance="?android:textAppearanceMedium"/>
 
+    <!-- Loading indicator is only shown before the first load -->
+<ProgressBar
+android:id="@+id/loading_indicator"
+style="@style/Widget.AppCompat.ProgressBar"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_centerInParent="true"/>
+
+</RelativeLayout>
