--- a/PopularMovies/app/src/main/res/layout/activity_main.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,35 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<GridView
-    android:id="@+id/grid_view"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnWidth="150dp"
-    android:numColumns="auto_fit"
-    android:verticalSpacing="0dp"
-    android:horizontalSpacing="0dp"
-    android:stretchMode="columnWidth"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    />
-    <!-- Empty view is only visible when the list has no items. -->
-<TextView
-android:id="@+id/empty_view"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_centerInParent="true"
-android:textAppearance="?android:textAppearanceMedium"/>
+    >
+  <GridView
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      android:id="@+id/grid_view"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:columnWidth="150dp"
+      android:horizontalSpacing="0dp"
+      android:numColumns="auto_fit"
+      android:stretchMode="columnWidth"
+      android:verticalSpacing="0dp"
+      />
+  <!-- Empty view is only visible when the list has no items. -->
+  <TextView
+      android:id="@+id/empty_view"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:textAppearance="?android:textAppearanceMedium"
+      />
 
-    <!-- Loading indicator is only shown before the first load -->
-<ProgressBar
-android:id="@+id/loading_indicator"
-style="@style/Widget.AppCompat.ProgressBar"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_centerInParent="true"/>
+  <!-- Loading indicator is only shown before the first load -->
+  <ProgressBar
+      android:id="@+id/loading_indicator"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      style="@style/Widget.AppCompat.ProgressBar"
+      />
 
 </RelativeLayout>
