--- a/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
@@ -1,85 +1,260 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.pranaykumar.popularmovies.MovieDetails">
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
+  android:layout_width="match_parent">
+<android.support.constraint.ConstraintLayout
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:orientation="vertical"
+  tools:context="com.example.pranaykumar.popularmovies.MovieDetails"
+  >
+
+
   <TextView
-      android:layout_width="match_parent"
-      android:layout_height="84dp"
-      android:text="Title"
-      android:id="@+id/titleTextView"
-      android:background="@color/colorLabels"
-      android:textStyle="bold"
-      android:textSize="32sp"
-      android:textColor="@android:color/white"
-      android:gravity="center"
-      />
+    android:id="@+id/titleTextView"
+    android:textStyle="bold"
+    android:layout_width="0dp"
+    android:layout_height="100dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:background="@color/colorLabels"
+    android:gravity="center"
+    android:text="Title"
+    android:textColor="@android:color/white"
+    android:textSize="32sp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintHorizontal_bias="1.0"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.0"
+    tools:layout_constraintBottom_creator="1"
+    tools:layout_constraintLeft_creator="1"
+    tools:layout_constraintRight_creator="1"
+    tools:layout_constraintTop_creator="1"/>
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:padding="16dp"
-      >
-    <ImageView
-        android:id="@+id/posterImageView"
-        android:layout_width="160dp"
-        android:layout_height="200dp"
-        ></ImageView>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        >
-      <TextView
-          android:id="@+id/dateTextView"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-          tools:text="2016"
-          />
-      <LinearLayout
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:orientation="horizontal">
-        <TextView
-            android:id="@+id/ratingTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            tools:text="6"
-            android:background="@color/colorLabels"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:text="/10"
-            android:background="@color/colorLabels"
-            />
-      </LinearLayout>
 
-    </LinearLayout>
-  </LinearLayout>
+  <ImageView
+    android:id="@+id/posterImageView"
+    android:layout_width="160dp"
+    android:layout_height="200dp"
+    tools:layout_conversion_absoluteX="16dp"
+    tools:layout_conversion_absoluteY="100dp"
+    tools:layout_conversion_absoluteWidth="160dp"
+    tools:layout_conversion_absoluteHeight="200dp"
+    android:layout_marginLeft="8dp"
+    app:layout_constraintLeft_toLeftOf="@+id/titleTextView"
+    android:layout_marginTop="16dp"
+    app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+    android:layout_marginStart="8dp"></ImageView>
+
   <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/overviewTextView"
-      tools:text="This is the overView of the movie"
-      android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-      />
+    android:id="@+id/dateTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+    tools:text="2016"
+    tools:layout_conversion_absoluteX="192dp"
+    tools:layout_conversion_absoluteY="116dp"
+    tools:layout_conversion_absoluteWidth="50dp"
+    tools:layout_conversion_absoluteHeight="26dp"
+    app:layout_constraintLeft_toRightOf="@+id/posterImageView"
+    android:layout_marginLeft="16dp"
+    app:layout_constraintTop_toTopOf="@+id/posterImageView"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="16dp"/>
+
+  <TextView
+    android:id="@+id/ratingTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="26dp"
+    android:layout_marginTop="16dp"
+    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+    app:layout_constraintHorizontal_bias="0.615"
+    app:layout_constraintLeft_toLeftOf="@+id/dateTextView"
+    app:layout_constraintTop_toBottomOf="@+id/dateTextView"
+    tools:layout_conversion_absoluteHeight="26dp"
+    tools:layout_conversion_absoluteWidth="12dp"
+    tools:layout_conversion_absoluteX="192dp"
+    tools:layout_conversion_absoluteY="142dp"
+    tools:text="6"
+    />
+  <TextView
+    android:id="@+id/textView4"
+    android:layout_width="34dp"
+    android:layout_height="26dp"
+    android:text="/10"
+    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+    tools:layout_conversion_absoluteHeight="26dp"
+    tools:layout_conversion_absoluteWidth="34dp"
+    tools:layout_conversion_absoluteX="204dp"
+    tools:layout_conversion_absoluteY="142dp"
+    android:layout_marginStart="8dp"
+    app:layout_constraintTop_toBottomOf="@+id/ratingTextView"
+    app:layout_constraintBottom_toTopOf="@+id/ratingTextView"
+    app:layout_constraintLeft_toRightOf="@+id/ratingTextView"
+    android:layout_marginLeft="8dp"/>
 
 
-</LinearLayout>
-</ScrollView>
+  <TextView
+    android:id="@+id/overviewTextView"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+    tools:text="This is the overView of the movie"
+    tools:layout_conversion_absoluteX="0dp"
+    tools:layout_conversion_absoluteY="316dp"
+    tools:layout_conversion_absoluteWidth="384dp"
+    tools:layout_conversion_absoluteHeight="26dp"
+    app:layout_constraintLeft_toLeftOf="@+id/posterImageView"
+    android:layout_marginTop="16dp"
+    app:layout_constraintTop_toBottomOf="@+id/posterImageView"/>
+  <ImageView
+    android:id="@+id/GuideLine1"
+    android:layout_width="0dp"
+    android:layout_height="2dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/overviewTextView"
+    app:srcCompat="@android:color/darker_gray"/>
+  <ImageButton
+    android:id="@+id/playVideoBtn1"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    android:layout_marginTop="32dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginLeft="16dp"
+    android:background="?android:attr/colorBackground"
+    app:layout_constraintLeft_toLeftOf="@+id/GuideLine1"
+    app:layout_constraintTop_toBottomOf="@+id/GuideLine1"
+    app:srcCompat="@drawable/ic_play_circle_filled_white_black_36dp"/>
+  <TextView
+    android:id="@+id/textViewTrailer1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginLeft="16dp"
+    android:text="Trailer 1"
+    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+    app:layout_constraintBottom_toTopOf="@+id/playVideoBtn1"
+    app:layout_constraintLeft_toRightOf="@+id/playVideoBtn1"
+    app:layout_constraintTop_toBottomOf="@+id/playVideoBtn1"
+    />
+  <ImageButton
+    android:id="@+id/playVideoBtn2"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    android:layout_marginTop="32dp"
+    android:layout_marginBottom="16dp"
+    android:background="?android:attr/colorBackground"
+    app:layout_constraintBottom_toTopOf="@+id/GuideLine2"
+    app:layout_constraintLeft_toLeftOf="@+id/playVideoBtn1"
+    app:layout_constraintTop_toBottomOf="@+id/guideLine3"
+    app:srcCompat="@drawable/ic_play_circle_filled_white_black_36dp"/>
+  <TextView
+    android:id="@+id/textViewTrailer2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginLeft="16dp"
+    android:text="Trailer 2"
+    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+    app:layout_constraintBottom_toTopOf="@+id/playVideoBtn2"
+    app:layout_constraintLeft_toRightOf="@+id/playVideoBtn2"
+    app:layout_constraintTop_toBottomOf="@+id/playVideoBtn2"/>
+  <ImageView
+    android:id="@+id/GuideLine2"
+    android:layout_width="0dp"
+    android:layout_height="2dp"
+    android:layout_marginTop="32dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textViewTrailer2"
+    app:srcCompat="@android:color/darker_gray"
+    app:layout_constraintHorizontal_bias="0.0"/>
+  <TextView
+    android:id="@+id/text_view_reviews"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="32dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:textAppearance="@style/TextAppearance.AppCompat"
+    android:textSize="18sp"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintLeft_toLeftOf="@+id/GuideLine2"
+    app:layout_constraintRight_toRightOf="@+id/GuideLine2"
+    app:layout_constraintTop_toBottomOf="@+id/GuideLine2"
+    tools:text="Review of the Movie is awesome"/>
+  <TextView
+    android:id="@+id/trailerLabel"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginLeft="8dp"
+    android:text="Trailers:"
+    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/GuideLine1"/>
+  <ImageView
+    android:id="@+id/guideLine3"
+    android:layout_width="0dp"
+    android:layout_height="2dp"
+    android:layout_marginTop="32dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    app:layout_constraintLeft_toLeftOf="@+id/GuideLine1"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textViewTrailer1"
+    app:srcCompat="@android:color/darker_gray"
+    app:layout_constraintHorizontal_bias="1.0"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"/>
+  <TextView
+    android:id="@+id/reviewsLabel"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:text="Reviews:"
+    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
+    app:layout_constraintLeft_toLeftOf="@+id/GuideLine2"
+    app:layout_constraintTop_toBottomOf="@+id/GuideLine2"
+    />
+  <ImageButton
+    android:id="@+id/markAsFavButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:background="@android:color/background_light"
+    app:layout_constraintHorizontal_bias="0.333"
+    app:layout_constraintLeft_toLeftOf="@+id/ratingTextView"
+    app:layout_constraintRight_toRightOf="@+id/textView4"
+    app:layout_constraintTop_toBottomOf="@+id/ratingTextView"
+    app:srcCompat="@drawable/ic_stars_green_600_24dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"/>
+
+
+</android.support.constraint.ConstraintLayout>
+  </ScrollView>
