--- a/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
@@ -18,24 +18,14 @@
     android:textStyle="bold"
     android:layout_width="0dp"
     android:layout_height="100dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
     android:background="@color/colorLabels"
     android:gravity="center"
     android:text="Title"
     android:textColor="@android:color/white"
     android:textSize="32sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.0"
-    tools:layout_constraintBottom_creator="1"
     tools:layout_constraintLeft_creator="1"
     tools:layout_constraintRight_creator="1"
     tools:layout_constraintTop_creator="1"/>
@@ -45,15 +35,15 @@
     android:id="@+id/posterImageView"
     android:layout_width="160dp"
     android:layout_height="200dp"
-    tools:layout_conversion_absoluteX="16dp"
-    tools:layout_conversion_absoluteY="100dp"
-    tools:layout_conversion_absoluteWidth="160dp"
-    tools:layout_conversion_absoluteHeight="200dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginStart="8dp"
     android:layout_marginLeft="8dp"
     app:layout_constraintLeft_toLeftOf="@+id/titleTextView"
-    android:layout_marginTop="16dp"
     app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-    android:layout_marginStart="8dp"></ImageView>
+    tools:layout_conversion_absoluteHeight="200dp"
+    tools:layout_conversion_absoluteWidth="160dp"
+    tools:layout_conversion_absoluteX="16dp"
+    tools:layout_conversion_absoluteY="100dp"></ImageView>
 
   <TextView
     android:id="@+id/dateTextView"
@@ -77,30 +67,13 @@
     android:layout_height="26dp"
     android:layout_marginTop="16dp"
     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-    app:layout_constraintHorizontal_bias="0.615"
     app:layout_constraintLeft_toLeftOf="@+id/dateTextView"
     app:layout_constraintTop_toBottomOf="@+id/dateTextView"
     tools:layout_conversion_absoluteHeight="26dp"
     tools:layout_conversion_absoluteWidth="12dp"
     tools:layout_conversion_absoluteX="192dp"
     tools:layout_conversion_absoluteY="142dp"
-    tools:text="6"
-    />
-  <TextView
-    android:id="@+id/textView4"
-    android:layout_width="34dp"
-    android:layout_height="26dp"
-    android:text="/10"
-    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-    tools:layout_conversion_absoluteHeight="26dp"
-    tools:layout_conversion_absoluteWidth="34dp"
-    tools:layout_conversion_absoluteX="204dp"
-    tools:layout_conversion_absoluteY="142dp"
-    android:layout_marginStart="8dp"
-    app:layout_constraintTop_toBottomOf="@+id/ratingTextView"
-    app:layout_constraintBottom_toTopOf="@+id/ratingTextView"
-    app:layout_constraintLeft_toRightOf="@+id/ratingTextView"
-    android:layout_marginLeft="8dp"/>
+    tools:text="6/10"/>
 
 
   <TextView
@@ -243,17 +216,13 @@
     android:id="@+id/markAsFavButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:background="@android:color/background_light"
-    app:layout_constraintHorizontal_bias="0.333"
-    app:layout_constraintLeft_toLeftOf="@+id/ratingTextView"
-    app:layout_constraintRight_toRightOf="@+id/textView4"
-    app:layout_constraintTop_toBottomOf="@+id/ratingTextView"
-    app:srcCompat="@drawable/ic_stars_green_600_24dp"
+    android:layout_marginTop="16dp"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"/>
+    android:layout_marginLeft="8dp"
+    android:background="?android:attr/colorBackground"
+    app:layout_constraintLeft_toLeftOf="@+id/ratingTextView"
+    app:layout_constraintTop_toBottomOf="@+id/ratingTextView"
+    app:srcCompat="@drawable/ic_stars_black_36dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
