--- a/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_movie_details.xml
@@ -4,226 +4,239 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
   android:layout_width="match_parent">
-<android.support.constraint.ConstraintLayout
+  <android.support.constraint.ConstraintLayout
 
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:orientation="vertical"
-  tools:context="com.example.pranaykumar.popularmovies.MovieDetails"
-  >
-
-
-  <TextView
-    android:id="@+id/titleTextView"
-    android:textStyle="bold"
-    android:layout_width="0dp"
-    android:layout_height="100dp"
-    android:background="@color/colorLabels"
-    android:gravity="center"
-    android:text="Title"
-    android:textColor="@android:color/white"
-    android:textSize="32sp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    tools:layout_constraintLeft_creator="1"
-    tools:layout_constraintRight_creator="1"
-    tools:layout_constraintTop_creator="1"/>
-
-
-  <ImageView
-    android:id="@+id/posterImageView"
-    android:layout_width="160dp"
-    android:layout_height="200dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginLeft="8dp"
-    app:layout_constraintLeft_toLeftOf="@+id/titleTextView"
-    app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-    tools:layout_conversion_absoluteHeight="200dp"
-    tools:layout_conversion_absoluteWidth="160dp"
-    tools:layout_conversion_absoluteX="16dp"
-    tools:layout_conversion_absoluteY="100dp"></ImageView>
-
-  <TextView
-    android:id="@+id/dateTextView"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-    tools:text="2016"
-    tools:layout_conversion_absoluteX="192dp"
-    tools:layout_conversion_absoluteY="116dp"
-    tools:layout_conversion_absoluteWidth="50dp"
-    tools:layout_conversion_absoluteHeight="26dp"
-    app:layout_constraintLeft_toRightOf="@+id/posterImageView"
-    android:layout_marginLeft="16dp"
-    app:layout_constraintTop_toTopOf="@+id/posterImageView"
-    android:layout_marginTop="8dp"
-    android:layout_marginStart="16dp"/>
-
-  <TextView
-    android:id="@+id/ratingTextView"
-    android:layout_width="wrap_content"
-    android:layout_height="26dp"
-    android:layout_marginTop="16dp"
-    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-    app:layout_constraintLeft_toLeftOf="@+id/dateTextView"
-    app:layout_constraintTop_toBottomOf="@+id/dateTextView"
-    tools:layout_conversion_absoluteHeight="26dp"
-    tools:layout_conversion_absoluteWidth="12dp"
-    tools:layout_conversion_absoluteX="192dp"
-    tools:layout_conversion_absoluteY="142dp"
-    tools:text="6/10"/>
+    android:orientation="vertical"
+    tools:context="com.example.pranaykumar.popularmovies.MovieDetails"
+    >
 
 
-  <TextView
-    android:id="@+id/overviewTextView"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-    tools:text="This is the overView of the movie"
-    tools:layout_conversion_absoluteX="0dp"
-    tools:layout_conversion_absoluteY="316dp"
-    tools:layout_conversion_absoluteWidth="384dp"
-    tools:layout_conversion_absoluteHeight="26dp"
-    app:layout_constraintLeft_toLeftOf="@+id/posterImageView"
-    android:layout_marginTop="16dp"
-    app:layout_constraintTop_toBottomOf="@+id/posterImageView"/>
-  <ImageView
-    android:id="@+id/GuideLine1"
-    android:layout_width="0dp"
-    android:layout_height="2dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/overviewTextView"
-    app:srcCompat="@android:color/darker_gray"/>
-  <ImageButton
-    android:id="@+id/playVideoBtn1"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_marginTop="32dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginLeft="16dp"
-    android:background="?android:attr/colorBackground"
-    app:layout_constraintLeft_toLeftOf="@+id/GuideLine1"
-    app:layout_constraintTop_toBottomOf="@+id/GuideLine1"
-    app:srcCompat="@drawable/ic_play_circle_filled_white_black_36dp"/>
-  <TextView
-    android:id="@+id/textViewTrailer1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginLeft="16dp"
-    android:text="Trailer 1"
-    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-    app:layout_constraintBottom_toTopOf="@+id/playVideoBtn1"
-    app:layout_constraintLeft_toRightOf="@+id/playVideoBtn1"
-    app:layout_constraintTop_toBottomOf="@+id/playVideoBtn1"
-    />
-  <ImageButton
-    android:id="@+id/playVideoBtn2"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_marginTop="32dp"
-    android:layout_marginBottom="16dp"
-    android:background="?android:attr/colorBackground"
-    app:layout_constraintBottom_toTopOf="@+id/GuideLine2"
-    app:layout_constraintLeft_toLeftOf="@+id/playVideoBtn1"
-    app:layout_constraintTop_toBottomOf="@+id/guideLine3"
-    app:srcCompat="@drawable/ic_play_circle_filled_white_black_36dp"/>
-  <TextView
-    android:id="@+id/textViewTrailer2"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginLeft="16dp"
-    android:text="Trailer 2"
-    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-    app:layout_constraintBottom_toTopOf="@+id/playVideoBtn2"
-    app:layout_constraintLeft_toRightOf="@+id/playVideoBtn2"
-    app:layout_constraintTop_toBottomOf="@+id/playVideoBtn2"/>
-  <ImageView
-    android:id="@+id/GuideLine2"
-    android:layout_width="0dp"
-    android:layout_height="2dp"
-    android:layout_marginTop="32dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textViewTrailer2"
-    app:srcCompat="@android:color/darker_gray"
-    app:layout_constraintHorizontal_bias="0.0"/>
-  <TextView
-    android:id="@+id/text_view_reviews"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="32dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:textAppearance="@style/TextAppearance.AppCompat"
-    android:textSize="18sp"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintLeft_toLeftOf="@+id/GuideLine2"
-    app:layout_constraintRight_toRightOf="@+id/GuideLine2"
-    app:layout_constraintTop_toBottomOf="@+id/GuideLine2"
-    tools:text="Review of the Movie is awesome"/>
-  <TextView
-    android:id="@+id/trailerLabel"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginLeft="8dp"
-    android:text="Trailers:"
-    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/GuideLine1"/>
-  <ImageView
-    android:id="@+id/guideLine3"
-    android:layout_width="0dp"
-    android:layout_height="2dp"
-    android:layout_marginTop="32dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    app:layout_constraintLeft_toLeftOf="@+id/GuideLine1"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textViewTrailer1"
-    app:srcCompat="@android:color/darker_gray"
-    app:layout_constraintHorizontal_bias="1.0"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"/>
-  <TextView
-    android:id="@+id/reviewsLabel"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:text="Reviews:"
-    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
-    app:layout_constraintLeft_toLeftOf="@+id/GuideLine2"
-    app:layout_constraintTop_toBottomOf="@+id/GuideLine2"
-    />
-  <ImageButton
-    android:id="@+id/markAsFavButton"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginLeft="8dp"
-    android:background="?android:attr/colorBackground"
-    app:layout_constraintLeft_toLeftOf="@+id/ratingTextView"
-    app:layout_constraintTop_toBottomOf="@+id/ratingTextView"
-    app:srcCompat="@drawable/ic_stars_black_36dp"/>
+    <TextView
+      android:id="@+id/titleTextView"
+      android:textStyle="bold"
+      android:layout_width="0dp"
+      android:layout_height="100dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginBottom="8dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      android:background="@color/colorLabels"
+      android:gravity="center"
+      android:text="Title"
+      android:textColor="@android:color/white"
+      android:textSize="32sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.0"
+      tools:layout_constraintBottom_creator="1"
+      tools:layout_constraintLeft_creator="1"
+      tools:layout_constraintRight_creator="1"
+      tools:layout_constraintTop_creator="1"/>
 
 
-</android.support.constraint.ConstraintLayout>
-  </ScrollView>
+    <ImageView
+      android:id="@+id/posterImageView"
+      android:layout_width="160dp"
+      android:layout_height="200dp"
+      tools:layout_conversion_absoluteX="16dp"
+      tools:layout_conversion_absoluteY="100dp"
+      tools:layout_conversion_absoluteWidth="160dp"
+      tools:layout_conversion_absoluteHeight="200dp"
+      android:layout_marginLeft="8dp"
+      app:layout_constraintLeft_toLeftOf="@+id/titleTextView"
+      android:layout_marginTop="16dp"
+      app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+      android:layout_marginStart="8dp"></ImageView>
+
+    <TextView
+      android:id="@+id/dateTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+      tools:text="2016"
+      tools:layout_conversion_absoluteX="192dp"
+      tools:layout_conversion_absoluteY="116dp"
+      tools:layout_conversion_absoluteWidth="50dp"
+      tools:layout_conversion_absoluteHeight="26dp"
+      app:layout_constraintLeft_toRightOf="@+id/posterImageView"
+      android:layout_marginLeft="16dp"
+      app:layout_constraintTop_toTopOf="@+id/posterImageView"
+      android:layout_marginTop="8dp"
+      android:layout_marginStart="16dp"/>
+
+    <TextView
+      android:id="@+id/ratingTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="26dp"
+      android:layout_marginTop="16dp"
+      android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+      app:layout_constraintHorizontal_bias="0.615"
+      app:layout_constraintLeft_toLeftOf="@+id/dateTextView"
+      app:layout_constraintTop_toBottomOf="@+id/dateTextView"
+      tools:layout_conversion_absoluteHeight="26dp"
+      tools:layout_conversion_absoluteWidth="12dp"
+      tools:layout_conversion_absoluteX="192dp"
+      tools:layout_conversion_absoluteY="142dp"
+      tools:text="6"
+      />
+
+
+    <TextView
+      android:id="@+id/overviewTextView"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+      tools:text="This is the overView of the movie"
+      tools:layout_conversion_absoluteX="0dp"
+      tools:layout_conversion_absoluteY="316dp"
+      tools:layout_conversion_absoluteWidth="384dp"
+      tools:layout_conversion_absoluteHeight="26dp"
+      app:layout_constraintLeft_toLeftOf="@+id/posterImageView"
+      android:layout_marginTop="16dp"
+      app:layout_constraintTop_toBottomOf="@+id/posterImageView"/>
+    <ImageView
+      android:id="@+id/GuideLine1"
+      android:layout_width="0dp"
+      android:layout_height="2dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/overviewTextView"
+      app:srcCompat="@android:color/darker_gray"/>
+    <ImageButton
+      android:id="@+id/playVideoBtn1"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:layout_marginTop="32dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginLeft="16dp"
+      android:background="?android:attr/colorBackground"
+      app:layout_constraintLeft_toLeftOf="@+id/GuideLine1"
+      app:layout_constraintTop_toBottomOf="@+id/GuideLine1"
+      app:srcCompat="@drawable/ic_play_circle_filled_white_black_36dp"/>
+    <TextView
+      android:id="@+id/textViewTrailer1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginLeft="16dp"
+      android:text="Trailer 1"
+      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+      app:layout_constraintBottom_toTopOf="@+id/playVideoBtn1"
+      app:layout_constraintLeft_toRightOf="@+id/playVideoBtn1"
+      app:layout_constraintTop_toBottomOf="@+id/playVideoBtn1"
+      />
+    <ImageButton
+      android:id="@+id/playVideoBtn2"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:layout_marginTop="32dp"
+      android:layout_marginBottom="16dp"
+      android:background="?android:attr/colorBackground"
+      app:layout_constraintBottom_toTopOf="@+id/GuideLine2"
+      app:layout_constraintLeft_toLeftOf="@+id/playVideoBtn1"
+      app:layout_constraintTop_toBottomOf="@+id/guideLine3"
+      app:srcCompat="@drawable/ic_play_circle_filled_white_black_36dp"/>
+    <TextView
+      android:id="@+id/textViewTrailer2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginLeft="16dp"
+      android:text="Trailer 2"
+      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+      app:layout_constraintBottom_toTopOf="@+id/playVideoBtn2"
+      app:layout_constraintLeft_toRightOf="@+id/playVideoBtn2"
+      app:layout_constraintTop_toBottomOf="@+id/playVideoBtn2"/>
+    <ImageView
+      android:id="@+id/GuideLine2"
+      android:layout_width="0dp"
+      android:layout_height="2dp"
+      android:layout_marginTop="32dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textViewTrailer2"
+      app:srcCompat="@android:color/darker_gray"
+      app:layout_constraintHorizontal_bias="0.0"/>
+    <TextView
+      android:id="@+id/text_view_reviews"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="32dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginEnd="16dp"
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"
+      android:textAppearance="@style/TextAppearance.AppCompat"
+      android:textSize="18sp"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintLeft_toLeftOf="@+id/GuideLine2"
+      app:layout_constraintRight_toRightOf="@+id/GuideLine2"
+      app:layout_constraintTop_toBottomOf="@+id/GuideLine2"
+      tools:text="Review of the Movie is awesome"/>
+    <TextView
+      android:id="@+id/trailerLabel"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginLeft="8dp"
+      android:text="Trailers:"
+      android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/GuideLine1"/>
+    <ImageView
+      android:id="@+id/guideLine3"
+      android:layout_width="0dp"
+      android:layout_height="2dp"
+      android:layout_marginTop="32dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      app:layout_constraintLeft_toLeftOf="@+id/GuideLine1"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textViewTrailer1"
+      app:srcCompat="@android:color/darker_gray"
+      app:layout_constraintHorizontal_bias="1.0"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"/>
+    <TextView
+      android:id="@+id/reviewsLabel"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:text="Reviews:"
+      android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
+      app:layout_constraintLeft_toLeftOf="@+id/GuideLine2"
+      app:layout_constraintTop_toBottomOf="@+id/GuideLine2"
+      />
+    <ImageButton
+      android:id="@+id/markAsFavButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:layout_marginLeft="8dp"
+      android:background="@android:color/background_light"
+      app:layout_constraintLeft_toLeftOf="@+id/ratingTextView"
+      app:layout_constraintTop_toBottomOf="@+id/ratingTextView"
+      app:srcCompat="@drawable/ic_stars_black_36dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"/>
+
+
+  </android.support.constraint.ConstraintLayout>
+</ScrollView>
