--- a/PopularMovies/app/src/main/res/layout/grid_item.xml
+++ b/PopularMovies/app/src/main/res/layout/grid_item.xml
@@ -7,8 +7,9 @@
   <ImageView
     android:id="@+id/poster"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/poster_imageView_height"
+    android:layout_height="wrap_content"
+    android:scaleType="fitXY"
     android:adjustViewBounds="true"
-    android:scaleType="centerCrop"
+    android:transitionName="albumArt"
     />
 </LinearLayout>
