--- a/PopularMovies/app/src/main/res/layout/activity_favourite_movies_nav.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_favourite_movies_nav.xml
@@ -1,7 +1,13 @@
-<layout
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools">
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/drawer_layout"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:fitsSystemWindows="true"
+  tools:openDrawer="start">
   <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -37,4 +43,18 @@
       app:layout_constraintTop_toTopOf="parent"/>
 
   </android.support.constraint.ConstraintLayout>
-</layout>
+  <include
+    layout="@layout/app_bar_favourite_movies_nav"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+
+  <android.support.design.widget.NavigationView
+    android:id="@+id/nav_view"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_gravity="start"
+    android:fitsSystemWindows="true"
+    app:headerLayout="@layout/nav_header_front"
+    app:menu="@menu/activity_favourite_movies_nav_drawer"/>
+
+</android.support.v4.widget.DrawerLayout>
