--- a/PopularMovies/app/src/main/res/layout/activity_front.xml
+++ b/PopularMovies/app/src/main/res/layout/activity_front.xml
@@ -1,7 +1,15 @@
-<layout
+<?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v4.widget.DrawerLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools">
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/drawer_layout"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:fitsSystemWindows="true"
+  tools:openDrawer="start">
+
   <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,7 +22,7 @@
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toLeftOf="@+id/loading_indicator"
       app:layout_constraintTop_toTopOf="parent"
-></android.support.v7.widget.RecyclerView>
+      />
     <!-- Empty view is only visible when the list has no items. -->
     <TextView
       android:id="@+id/empty_view"
@@ -34,8 +42,20 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toRightOf="@+id/empty_view"
       app:layout_constraintRight_toRightOf="@+id/empty_view"
-      app:layout_constraintTop_toTopOf="parent"
-/>
-
+      app:layout_constraintTop_toTopOf="parent"/>
   </android.support.constraint.ConstraintLayout>
-</layout>
+  <include
+    layout="@layout/app_bar_front"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+
+  <android.support.design.widget.NavigationView
+    android:id="@+id/nav_view"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_gravity="start"
+    android:fitsSystemWindows="true"
+    app:headerLayout="@layout/nav_header_front"
+    app:menu="@menu/activity_front_drawer"/>
+
+</android.support.v4.widget.DrawerLayout>
