--- a/PopularMovies/app/src/main/res/values/dimens.xml
+++ b/PopularMovies/app/src/main/res/values/dimens.xml
@@ -17,4 +17,10 @@
   <dimen name="reviews_width">0dp</dimen>
   <dimen name="reviews_textSize">18sp</dimen>
   <dimen name="poster_imageView_height">280dp</dimen>
+  <!-- Default screen margins, per the Android Design guidelines. -->
+  <dimen name="activity_horizontal_margin">16dp</dimen>
+  <dimen name="activity_vertical_margin">16dp</dimen>
+  <dimen name="nav_header_vertical_spacing">16dp</dimen>
+  <dimen name="nav_header_height">160dp</dimen>
+  <dimen name="fab_margin">16dp</dimen>
 </resources>
